https://github.com/villela91/C017-React-main

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+}
+
 html,
 body,
 #root {
-  background-color: gray;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+body {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
 }
