https://github.com/villela91/C017-React-main

--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -5,3 +5,11 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+.button-card {
+  display: flex;
+  width: 30%;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
