--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 150px;
   align-items: center;
   justify-content: center;
   border: 1px solid red;
